--- a/Insightinator.API/Insightinator.API.csproj
+++ b/Insightinator.API/Insightinator.API.csproj
@@ -18,15 +18,12 @@
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.8" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 	<PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\Background\" />
   </ItemGroup>
 
 </Project>
