--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
    "license": "MIT",
    "dependencies": {
       "@heroicons/react": "^2.0.18",
+      "@microsoft/signalr": "^7.0.7",
       "casual": "^1.6.2",
       "core-js": "^3.31.0",
       "cx": "^23.5.2",
